--- a/app/views/user/_form.html.haml
+++ b/app/views/user/_form.html.haml
@@ -21,6 +21,9 @@
       = f.label :password_confirmation
       = f.password_field :password_confirmation
       .help-block
+    = form_tag  do
+      = f.label :resume
+      = file_field_tag("resume")
     - if @user.instance_of? JobSeeker
       .form_field
         = f.label :job_search_status
@@ -29,6 +32,7 @@
                                              'id',
                                              'value',
                                              @user.job_seeker_status_id)
+    
     - if new
       = button_tag 'Register', class: 'btn btn-primary submit-button right', type: 'submit', autocomplete: 'off',
                   :data => {:disable_with => "<i class='fa fa-cog fa-spin'></i> Registering...".html_safe}
